# LargerThanLife

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  actual_rules.json  export_rules.json  requirements.txt  setup.py
src/: bindings.cpp  board.cpp  board.hpp  game.py  gui.py  main.py  random_rules.cpp  random_rules.hpp
tests/: test_GUI.py  test_board.cpp  test_random_rules.cpp
